--- a/Уроки/units/index.html
+++ b/Уроки/units/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 
 <head>
-    <!-- <script>
-        setTimeout(reminder, 5000);
-        function reminder() {
-            alert("Так и будешь смотреть на эту скучную страницу?");
-        }
-    </script> -->
-    <script src="unit_1.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css">
+    <title>Document</title>
 </head>
 
 <body>
 
+    <div class="box" id="box"></div>
+
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+
+    <div class="wrapper">
+        <div class="heart"></div>
+        <div class="heart"></div>
+        <div class="heart"></div>
+    </div>
+
+    <script src="unit_4.js"></script>
 </body>
 
 </html>
