--- a/Уроки/units/index.html
+++ b/Уроки/units/index.html
@@ -16,10 +16,12 @@
     <button>1</button>
     <button>2</button>
     <button>3</button>
-    <button>4</button>
+    <button onclick="alert('Вы нажали четвертую кнопку!')">4</button>
     <button>5</button>
 
-    <div class="circle"></div>
+    <div class="wrapper">
+        <div class="circle"></div>
+    </div>
     <div class="circle"></div>
     <div class="circle"></div>
 
@@ -29,7 +31,9 @@
         <div class="heart"></div>
     </div>
 
-    <script src="unit_4.js"></script>
+    <a color='black' ; href="https://youtube.com">"https://youtube.com"</a>
+
+    <script src="unit_6.js"></script>
 </body>
 
 </html>
