--- a/Уроки/units/index.html
+++ b/Уроки/units/index.html
@@ -11,6 +11,12 @@
 
 <body>
 
+    <label for="rub">RUB</label>
+    <input id="rub" type="text">
+
+    <label for="usd">USD</label>
+    <input id="usd" type="text">
+
     <div class="box" id="box"></div>
 
     <button>1</button>
@@ -33,7 +39,7 @@
 
     <a color='black' ; href="https://youtube.com">"https://youtube.com"</a>
 
-    <script src="unit_6.js"></script>
+    <script src="js/unit_8.js"></script>
 </body>
 
 </html>
